# SlicerQuickModelAlign

./: CMakeLists.txt  QuickModelAlign.py  README.md
QuickModelAlign/: CMakeLists.txt  QuickModelAlign.py
QuickModelAlign/Resources/CustomColorMaps/: blue.txt  red.txt
